[package]
name = "mult"
version = "0.1.0"
authors = ["jmurray <john@gardenway.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"


[[bin]]
name = "grade"
path = "src/bin/grade.rs"


[[bin]]
name = "karat"
path = "src/bin/main.rs"
